--- a/algo/src/App.css
+++ b/algo/src/App.css
@@ -7,6 +7,12 @@
   pointer-events: none;
 }
 
+.container{
+  width: 100%;
+  margin: auto;
+
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
